<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menulinear00"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_background"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveButtonClick"
            android:text="@string/save_button_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"
        android:paddingTop="@dimen/activity_vertical_padding"
	    android:paddingBottom="@dimen/activity_vertical_padding"
        android:background="@color/background"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_interval"
            style="@style/sublayoutStyle"
            android:orientation="horizontal" >

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_record_switch_title"
                android:textSize="@dimen/common_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_minheight"
            android:paddingLeft="@dimen/layout_horizontal_padding"
            android:paddingRight="@dimen/layout_horizontal_padding"
            style="@style/sublayoutStyle" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size"
                android:text="@string/settings_interval_item_title"
                 />

            <Spinner
                android:layout_width="0dp"
                android:id="@+id/spinner_interval"
                android:textSize="@dimen/common_text_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/interval" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_minheight"
            android:paddingLeft="@dimen/layout_horizontal_padding"
            android:paddingRight="@dimen/layout_horizontal_padding"
            android:layout_marginTop="-1dp"
            style="@style/sublayoutStyle" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_start_item_title"
                android:textSize="@dimen/common_text_size"
                 />

            <Spinner
                android:layout_width="0dp"
                android:id="@+id/Spinner_start"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size"
                android:layout_weight="1"
                android:entries="@array/start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_minheight"
            android:paddingLeft="@dimen/layout_horizontal_padding"
            android:paddingRight="@dimen/layout_horizontal_padding"
            android:layout_marginTop="-1dp"
            style="@style/sublayoutStyle"
            >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_end_item_title"
                android:textSize="@dimen/common_text_size"
                 />

            <Spinner
                android:layout_width="0dp"
                android:id="@+id/spinner_end"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size"
                android:layout_weight="1"
                android:entries="@array/end" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>