<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<ScrollView
	    android:id="@+id/scrollview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/background"
	    android:alpha="0.85"
	    android:fadingEdge="vertical"
	    android:scrollbarStyle="insideOverlay" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingBottom="@dimen/activity_vertical_padding"
	        android:paddingTop="@dimen/activity_vertical_padding"
	        android:scrollbars="vertical" >
	        <LinearLayout
	            android:id="@+id/linearlayout00"
	            style="@style/sublayoutStyle"
	            android:layout_marginTop="@dimen/title_height"
	            android:layout_marginBottom="@dimen/layout_interval"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/location_name_item_title"
	                android:textSize="@dimen/common_text_size" />
	
	            <LinearLayout
	                android:id="@+id/linearlayout001"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right" >
	
	                <TextView
	                    android:id="@+id/location"
	                    style="@style/infoTextViewStyle"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/common_text_size" />
	            <EditText
	                    android:id="@+id/location_edit"
	                    style="@style/infoTextViewStyle"
	                    android:inputType="textMultiLine|textNoSuggestions"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:gravity="right|top"
	                    android:visibility="gone"
	                    android:textSize="@dimen/common_text_size" />
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout
	            android:id="@+id/menulinear02"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="@dimen/layout_interval"
	            style="@style/sublayoutStyle" >
	
	            <TextView
	                android:id="@+id/TextView02"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/date_item_title"
	                android:textSize="@dimen/common_text_size" />
	
	            <LinearLayout
	                android:id="@+id/linearlayout011"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right" >
	
	                <TextView
	                    android:id="@+id/date"
	                    style="@style/infoTextViewStyle"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:textSize="@dimen/common_text_size" />
	            </LinearLayout>
	        </LinearLayout>
			<LinearLayout
	            android:id="@+id/menulinear03"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="@dimen/layout_interval"
	            style="@style/sublayoutStyle"
	             >
	
	            <TextView
	                android:id="@+id/TextView03"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/time_item_title"
	                android:textSize="@dimen/common_text_size" />
	
	            <LinearLayout
	                android:id="@+id/linearlayout030"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right" >
	
	                <TextView
	                    android:id="@+id/time"
	                    style="@style/infoTextViewStyle"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/common_text_size" />
	                <TimePicker
					    android:id="@+id/time_edit"
				        android:layout_gravity="right"
				        android:layout_width="wrap_content"
				        android:visibility="gone"
				        android:layout_height="wrap_content" />
	            </LinearLayout>
	        </LinearLayout>
	        <LinearLayout
	            android:id="@+id/LinearLayout02"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            style="@style/sublayoutStyle"
	            android:layout_marginBottom="@dimen/layout_interval"
	            android:baselineAligned="false"
	            android:orientation="vertical" >
	
	            <LinearLayout
	                android:id="@+id/linearlayout021"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:background="@drawable/layout_head_shape"
                	android:minHeight="@dimen/layout_minheight"
	                android:orientation="horizontal" >
	
	                <TextView
	                    android:id="@+id/TextView01"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/detail_item_title"
	                    android:textSize="@dimen/common_text_size" />
	
	            </LinearLayout>
	
	            <TextView
	                android:id="@+id/text_record"
	                android:textSize="17sp"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:paddingLeft="5dp"
	                android:paddingRight="5dp"
	                 />
	            <EditText
	                android:id="@+id/textarea"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="left|top"
	                android:inputType="textMultiLine|textNoSuggestions"
	                android:textSize="17sp"
	                android:visibility="gone" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:id="@+id/linearlayout03"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            style="@style/sublayoutStyle"
	            android:orientation="vertical" >
	            <LinearLayout
	                android:id="@+id/linearlayout031"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:background="@drawable/layout_head_shape"
                	android:minHeight="@dimen/layout_minheight" >
	
	                <TextView
	                    android:id="@+id/TextView0311"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/photo_item_title"
	                    android:textSize="@dimen/common_text_size" />
	
	                <LinearLayout
	                    android:id="@+id/linearlayout0311"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:gravity="right" >
	
	                    <Button
	                        android:id="@+id/add_button"
	                        style="@style/buttonStyle"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:visibility="gone"
	                        android:layout_margin="1dp"
	                        android:onClick="onAddButtonClick"
	                        android:text="@string/add_button_name" />
	                    <Button
	                        android:id="@+id/takephoto_button"
	                        style="@style/buttonStyle"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_margin="1dp"
	                        android:visibility="gone"
	                        android:onClick="onPhotoButtonClick"
	                        android:text="@string/photo_button_name" />
	                </LinearLayout>
		        </LinearLayout>
				<com.track.android.FixedGridView
				    android:id="@+id/photos"
				    style="@style/fixedGridViewStyle" >
	        	</com.track.android.FixedGridView>
	     	</LinearLayout>
	    </LinearLayout>
	</ScrollView>

	<LinearLayout
	    android:id="@+id/menulinear00"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/title_height"
	    android:alpha="0.85"
	    android:background="@color/title_background"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/edit_button"
	        style="@style/buttonStyle"
	        android:onClick="onEditButtonClick"
	        android:text="@string/edit_button_name" />

	    <Button
	        android:id="@+id/delete_button"
	        style="@style/buttonStyle"
	        android:onClick="onDeleteButtonClick"
	        android:text="@string/delete_button_name" />
	</LinearLayout>

</RelativeLayout>